fixed responsive design bug in home page (search results were hidden behind controls due to fixed height)

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -203,6 +203,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      height: unset;
     }
 
     &__expand-controls {
